WebCore:

Reviewed by Adele Peterson.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17966
          REGRESSION (r31114-r31132): Clearing via br behaves unpredictably

        Test: fast/block/float/br-with-clear.html

        * rendering/bidi.cpp:
        (WebCore::RenderBlock::layoutInlineChildren): Fixed the logic for the
        very special case of an all-lines-clean block that ends with a float-
        clearing <br> by looking for the <br> at the end of the line rather
        than at its beginning.

LayoutTests:

        Reviewed by Adele Peterson.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17966
          REGRESSION (r31114-r31132): Clearing via br behaves unpredictably

        * fast/block/float/br-with-clear.html: Added.
        * platform/mac/fast/block/float/br-with-clear-expected.checksum: Added.
        * platform/mac/fast/block/float/br-with-clear-expected.png: Added.
        * platform/mac/fast/block/float/br-with-clear-expected.txt: Added.



Canonical link: https://commits.webkit.org/24892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31213 268f45cc-cd09-0410-ab3c-d52691b4dbfc